--- a/style.css
+++ b/style.css
@@ -13,10 +13,58 @@
     background-image: radial-gradient(center, circle, #FFFFFF 0%, hsl(0, 100%, 50%) 100%);
 }
 
-#color-container {
+.color-container {
     background: rgb(255, 255, 255); /* For browsers that do not support gradients */
     background: -webkit-radial-gradient(circle, #FEFEDF, #C493FF, #845EC2); /* Safari */
     background: -o-radial-gradient(circle, #FEFEDF, #C493FF, #845EC2); /* Opera 11.6 to 12.0 */
     background: -moz-radial-gradient(circle, #FEFEDF, #C493FF, #845EC2); /* Firefox 3.6 to 15 */
     background: radial-gradient(circle, #FEFEDF, #C493FF, #845EC2); /* Standard syntax */
 }
+
+.calculator {
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: repeat(5, 1fr);
+
+    min-height: 400px;
+    height: 50%;
+    min-width: 350px;
+    width: 30%;
+    border: 5px solid red;
+    /* 
+    padding: 10px;
+    border: 5px solid #845EC2;
+    border-radius: 10px; */
+}
+.btn {
+    width: 100px;
+    font-size: 25px;
+    cursor: pointer;
+    background: #FFFFFF;
+    border: none;
+    border-radius: 10px;
+    opacity: 0.75;
+}
+
+
+/* .output {
+    height: 100px;
+    border: 3px solid #845EC2;
+    border-radius: 10px;
+    margin: 10px;
+} */
+
+
+/* 
+.btn {
+    height: 50px;
+    width: 50px;
+    border-radius: 10px;
+    margin: 3px;
+    border: none;
+}
+ */
+
+
