--- a/style.css
+++ b/style.css
@@ -30,7 +30,6 @@
 
     height: 50%;
     min-height: 100vh;
-    border: 5px solid red; /* dubug */
 }
 
 .btn {
@@ -50,6 +49,8 @@
 }
 
 .output {
+    width: 100%;
+    height: 200px;
     grid-column: 1 / -1;
     background-color: rgba(0, 0, 0, 0.50);
 
@@ -66,11 +67,11 @@
 
 .first-operand {
     color: rgba(255, 255, 255, 0.75);
-    font-size: 1.5rem;
+    font-size: 2.5rem;
 }
 
 .second-operand {
     color: rgb(255, 255, 255);
-    font-size: 2.5rem;
+    font-size: 3.5rem;
 }
 
