--- a/style.css
+++ b/style.css
@@ -29,7 +29,6 @@
     grid-template-rows: minmax(120px, auto) repeat(5, 100px);
 
     height: 50%;
-    min-height: 100vh;
 }
 
 .btn {
@@ -49,8 +48,7 @@
 }
 
 .output {
-    width: 100%;
-    height: 200px;
+    height: 100%;
     grid-column: 1 / -1;
     background-color: rgba(0, 0, 0, 0.50);
 
